--- a/package.xml
+++ b/package.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0"?>
 <package>
-  <name>asl_turtlebot</name>
+  <name>avg_turtlebot</name>
   <version>0.0.0</version>
-  <description>The asl_turtlebot package</description>
+  <description>The avg_turtlebot package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag -->
+  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="blandry@stanford.edu">Benoit Landry</maintainer>
+  <maintainer email="blandry@todo.todo">blandry</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>MIT</license>
+  <license>TODO</license>
 
 
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/asl_turtlebot</url> -->
+  <!-- <url type="website">http://wiki.ros.org/avg_turtlebot</url> -->
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
@@ -43,11 +43,10 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>message_generation</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
-  <run_depend>message_generation</run_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
